<resources>
    <string name="app_name">Flipgrid Coding Challenge</string>
    <string name="first_name">First Name</string>
    <string name="email_address">Email Address</string>
    <string name="password">Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="confirmationPrompt">You have been registered for this awesome service. Please check your email listed below for instructions.</string>
    <string name="welcome">Welcome,</string>
    <string name="sign_in">Sign In</string>

</resources>
