<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="20dp"
    android:layout_marginLeft="30dp"
    android:layout_marginRight="30dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/welcome"
            android:textColor="@android:color/black"
            android:textSize="36sp" />

        <TextView
            android:id="@+id/userName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/first_name"
            android:textColor="@android:color/black"
            android:textSize="36sp"
            android:textStyle="bold"
            android:layout_marginBottom="15dp"/>

        <TextView
            android:id="@+id/textView7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/confirmationPrompt"
            android:layout_marginBottom="15dp"/>

        <TextView
            android:id="@+id/userEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="hint@gmail.com"
            android:textColor="@android:color/black"
            android:textSize="24sp"
            android:textStyle="bold"
            android:layout_marginBottom="175dp"/>

        <Button
            android:id="@+id/confirmation_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:background="@drawable/rounded_button"
            android:text="@string/sign_in"
            android:textColor="@android:color/white" />
    </LinearLayout>
</android.support.constraint.ConstraintLayout>